--- a/bindata/network/ovn-kubernetes/006-ovs-node.yaml
+++ b/bindata/network/ovn-kubernetes/006-ovs-node.yaml
@@ -93,8 +93,8 @@ spec:
             /usr/share/openvswitch/scripts/ovs-ctl --protocol=udp --dport=6081 enable-protocol
             echo "$(date -Iseconds) - ovs-daemons running"
 
-            tail -F --pid=$(cat /var/run/openvswitch/ovs-vswitchd.pid) /var/log/openvswitch/ovs-vswitchd.log &
-            tail -F --pid=$(cat /var/run/openvswitch/ovsdb-server.pid) /var/log/openvswitch/ovsdb-server.log &
+            setpriv --pdeathsig SIGTERM -- tail -F --pid=$(cat /var/run/openvswitch/ovs-vswitchd.pid) /var/log/openvswitch/ovs-vswitchd.log &
+            setpriv --pdeathsig SIGTERM -- tail -F --pid=$(cat /var/run/openvswitch/ovsdb-server.pid) /var/log/openvswitch/ovsdb-server.log &
             wait
           fi
         env:
